# multiminer-redux

./: .eslintignore  .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: about.rs  extract.rs  install.rs  logging.rs  main.rs  miner.rs
src/__tests__/hooks/: minerState.tests.ts  observable.tests.ts  profile.tests.ts
src/__tests__/services/: AppSettingsService.tests.ts  Formatters.tests.ts  MinerManager.tests.ts  ScreenBuffer.tests.ts
src/components/: AlgorithmMenuItem.tsx  AutoScrollTextArea.tsx  ChainMenuItem.tsx  EditCoinControls.tsx  EditMinerControls.tsx  EditWalletControls.tsx  MinerTypeMenuItem.tsx  MiningPoolControl.tsx  MiningPoolMenuItem.tsx  MiningPoolPortMenuItem.tsx  ScreenHeader.tsx  TabPanel.tsx  ThemeToggle.tsx  Toolbar.tsx  UsedByCoins.tsx  WalletMenuItem.tsx  index.ts
src/components/dashboard/: CoinsTable.tsx  CpuComputeTable.tsx  CpuSummaryTable.tsx  GpuComputeTable.tsx  GpuSummaryTable.tsx  WorkersGraphs.tsx  index.ts
src/components/toolbars/: MinerSelector.tsx  MinerSummary.tsx
src/dialogs/: CustomDialogActions.tsx  EditCoinDialog.tsx  EditMinerDialog.tsx  EditWalletDialog.tsx  RemoveWalletDialog.tsx
src/hooks/: loadData.ts  minerActive.ts  profile.ts
src/models/: AlgorithmInfo.ts  AppSettings.ts  CoinDefinition.ts  CoinIcons.ts  DefaultSettings.ts  Enums.ts  Miner.ts  MinerInfo.ts  MinerState.ts  MiningPools.ts  Observables.ts  index.ts
src/screens/: AboutScreen.tsx  CoinsScreen.tsx  HomeScreen.tsx  MinersScreen.tsx  MonitorScreen.tsx  SettingsScreen.tsx  WalletsScreen.tsx
src/services/: AppSettingsService.ts  CoinFeed.ts  DataService.ts  DownloadManager.ts  Formatters.ts  MinerManager.ts  MinerService.ts  MonitorService.ts  SettingsService.ts  StatisticsAggregator.ts  UnmineableFeed.ts
src/services/monitors/: GMinerMonitor.ts  LolminerMonitor.ts  (+6 more)
src/shared/: AboutApi.ts  DialogApi.ts  DownloadApi.ts  LoggingApi.ts  MinerApi.ts  SettingsApi.ts  TickerApi.ts  UnmineableApi.ts
(+4 files in other folders)
