[workspace]
resolver = "2"

[package]
name = "multiminer-redux"
version = "1.0.0"
description = "Front-end for crypto mining with unmineable"
authors = ["BitCobblers"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
log = "0.4.21"
tauri = { version = "1", features = [
    "shell-open",
    "fs-remove-dir",
    "fs-rename-file",
    "fs-read-dir",
    "fs-exists",
    "fs-create-dir",
    "fs-read-file",
    "fs-remove-file",
    "fs-write-file",
    "path-all",
    "http-request",
    "dialog-save",
    "dialog-open",
] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2.1.0"
tokio = { version = "1.38.0", features = ["full"] }
shared_child = "1.0.0"
os_pipe = "1.1.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
